--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://freedjveca.com/"
+baseURL = "https://freediveca.com/"
 languageCode = "en-us"
 title = "Freedive California"
 theme = "minimal"
