--- a/config.toml
+++ b/config.toml
@@ -37,6 +37,11 @@ canonifyURLs = true
     url = "/courses/"
     name = "Courses"
     weight = 3
+    
+[[menu.main]]
+    url = "/conditions/"
+    name = "Ocean Conditions"
+    weight = 5
 
 # Social icons to be shown on the right-hand side of the navigation bar.
 # The "name" field should match the name of the icon in Font Awesome.
