--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,9 @@ theme = "minimal"
 googleAnalytics = ""
 publishDir = "docs"
 canonifyURLs = true
+    
+[markup.goldmark.renderer]
+  unsafe = true
 
 [params]
     author = "CJ Jessett"
