Add dark styles

--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ canonifyURLs = true
     accent = "none"
     showBorder = true
     backgroundColor = "white"
-    font = "Sourcecode Pro" # should match the name on Google Fonts!
+    font = "Open Sans:300" # should match the name on Google Fonts!
     highlight = false
     highlightStyle = "default"
     highlightLanguages = ["go", "haskell", "kotlin", "scala", "swift"]
